--- a/src/FSharp.Actor/FSharp.Actor.fsproj
+++ b/src/FSharp.Actor/FSharp.Actor.fsproj
@@ -41,12 +41,14 @@
     <Compile Include="Serialisation.fs" />
     <Compile Include="Logging.fs" />
     <Compile Include="Mailboxes.fs" />
+    <Compile Include="EventStores.fs" />
     <Compile Include="ActorPath.fs" />
     <Compile Include="Registry.fs" />
     <Compile Include="Actor.fs" />
     <Compile Include="Remoting.fs" />
     <Compile Include="Supervisor.fs" />
     <Compile Include="Patterns.fs" />
+    <Compile Include="Hosting.fs" />
     <None Include="packages.config" />
     <Compile Include="AssemblyInfo.fs" />
   </ItemGroup>
