--- a/src/FSharp.Actor/packages.config
+++ b/src/FSharp.Actor/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FsCoreSerializer" version="0.5.1" targetFramework="net45" />
   <package id="FSharp.Formatting" version="1.0.15" targetFramework="net45" />
 </packages>
