--- a/src/FSharp.Actor/FSharp.Actor.fsproj
+++ b/src/FSharp.Actor/FSharp.Actor.fsproj
@@ -38,13 +38,11 @@
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')" />
   <ItemGroup>
-    <Compile Include="Async.fs" />
     <Compile Include="Interfaces.fs" />
+    <Compile Include="Async.fs" />
     <Compile Include="Trie.fs" />
-    <Compile Include="Serialisation.fs" />
     <Compile Include="Logging.fs" />
     <Compile Include="Mailboxes.fs" />
-    <Compile Include="EventStores.fs" />
     <Compile Include="ActorPath.fs" />
     <Compile Include="Registry.fs" />
     <Compile Include="Actor.fs" />
@@ -55,6 +53,10 @@
     <Compile Include="AssemblyInfo.fs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="FsCoreSerializer">
+      <HintPath>..\..\packages\FsCoreSerializer.0.5.1\lib\net45\FsCoreSerializer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
