Begun adding conscept of actor system

--- a/src/FSharp.Actor/FSharp.Actor.fsproj
+++ b/src/FSharp.Actor/FSharp.Actor.fsproj
@@ -47,6 +47,7 @@
     <Compile Include="Actor.fs" />
     <Compile Include="Supervisor.fs" />
     <Compile Include="Dispatchers.fs" />
+    <Compile Include="ActorSystem.fs" />
     <None Include="packages.config" />
     <Compile Include="AssemblyInfo.fs" />
   </ItemGroup>
