--- a/src/FSharp.Actor/FSharp.Actor.fsproj
+++ b/src/FSharp.Actor/FSharp.Actor.fsproj
@@ -44,8 +44,7 @@
     <Compile Include="Logger.fs" />
     <Compile Include="Mailboxes.fs" />
     <Compile Include="Messages.fs" />
-    <Compile Include="Registries.fs" />
-    <Compile Include="Dispatchers.fs" />
+    <Compile Include="LocalTransport.fs" />
     <Compile Include="Actor.fs" />
     <Compile Include="Supervisor.fs" />
     <Compile Include="ActorSystem.fs" />
