--- a/src/FSharp.Actor/FSharp.Actor.fsproj
+++ b/src/FSharp.Actor/FSharp.Actor.fsproj
@@ -39,35 +39,18 @@
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')" />
   <ItemGroup>
     <Compile Include="Trie.fs" />
-    <Compile Include="Types.fs" />
-    <Compile Include="Async.fs" />
     <Compile Include="Logger.fs" />
     <Compile Include="Mailboxes.fs" />
+    <Compile Include="EventStream.fs" />
+    <Compile Include="Primitives.fs" />
     <Compile Include="Messages.fs" />
-    <Compile Include="LocalTransport.fs" />
+    <Compile Include="FaultTolerance.fs" />
     <Compile Include="Actor.fs" />
-    <Compile Include="Supervisor.fs" />
-    <Compile Include="ActorSystem.fs" />
+    <None Include="Script1.fsx" />
     <None Include="packages.config" />
     <Compile Include="AssemblyInfo.fs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Atomic">
-      <HintPath>..\..\packages\Disruptor-DamageBoy-IH.2.8.0.1\lib\net40\Atomic.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="clrzmq">
-      <HintPath>..\..\packages\clrzmq.3.0.0-rc1\lib\net40\clrzmq.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Disruptor">
-      <HintPath>..\..\packages\Disruptor-DamageBoy-IH.2.8.0.1\lib\net40\Disruptor.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Disruptor.Scheduler">
-      <HintPath>..\..\packages\Disruptor-DamageBoy-IH.2.8.0.1\lib\net40\Disruptor.Scheduler.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="FsCoreSerializer">
       <HintPath>..\..\packages\FsCoreSerializer.0.5.1\lib\net45\FsCoreSerializer.dll</HintPath>
       <Private>True</Private>
@@ -79,6 +62,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Remoting" />
   </ItemGroup>
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
