--- a/src/FSharp.Actor/FSharp.Actor.fsproj
+++ b/src/FSharp.Actor/FSharp.Actor.fsproj
@@ -52,35 +52,23 @@
   <Import Project="$(FSharpTargetsPath)" Condition="Exists('$(FSharpTargetsPath)')" />
   <ItemGroup>
     <Compile Include="Trie.fs" />
+    <Compile Include="Types.fs" />
+    <Compile Include="Async.fs" />
     <Compile Include="Mailbox.fs" />
     <Compile Include="Behaviour.fs" />
-    <Compile Include="Actor.Types.fs" />
-    <Compile Include="Infrastructure.Types.fs" />
     <Compile Include="Logger.fs" />
-    <Compile Include="EventStream.fs" />
     <Compile Include="Transport.fs" />
     <Compile Include="Actor.Operations.fs" />
     <Compile Include="Actor.Impl.fs" />
     <Compile Include="Actor.Dsl.fs" />
+    <Compile Include="EventStream.fs" />
     <Compile Include="Actor.fs" />
     <Compile Include="Supervisor.fs" />
-    <None Include="Script1.fsx" />
     <None Include="packages.config" />
     <Compile Include="AssemblyInfo.fs" />
+    <None Include="Script2.fsx" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Atomic">
-      <HintPath>..\..\packages\Disruptor-DamageBoy-IH.2.8.0.1\lib\net40\Atomic.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Disruptor">
-      <HintPath>..\..\packages\Disruptor-DamageBoy-IH.2.8.0.1\lib\net40\Disruptor.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Disruptor.Scheduler">
-      <HintPath>..\..\packages\Disruptor-DamageBoy-IH.2.8.0.1\lib\net40\Disruptor.Scheduler.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
