--- a/src/FSharp.Actor.ZeroMq/FSharp.Actor.ZeroMq.fsproj
+++ b/src/FSharp.Actor.ZeroMq/FSharp.Actor.ZeroMq.fsproj
@@ -20,19 +20,19 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <Tailcalls>false</Tailcalls>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\output\transports\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Debug\FSharp.Actor.ZeroMq.XML</DocumentationFile>
+    <DocumentationFile>..\..\output\transports\FSharp.Actor.ZeroMq.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <Tailcalls>true</Tailcalls>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\output\transports\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Release\FSharp.Actor.ZeroMq.XML</DocumentationFile>
+    <DocumentationFile>..\..\output\transports\FSharp.Actor.ZeroMq.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="clrzmq">
