Actorsystem and cleaned up operations

--- a/src/FSharp.Actor/FSharp.Actor.fsproj
+++ b/src/FSharp.Actor/FSharp.Actor.fsproj
@@ -59,6 +59,8 @@
     <Compile Include="Logger.fs" />
     <Compile Include="EventStream.fs" />
     <Compile Include="Transport.fs" />
+    <Compile Include="Actor.System.fs" />
+    <Compile Include="Actor.Definition.fs" />
     <Compile Include="Actor.Operations.fs" />
     <Compile Include="Actor.Impl.fs" />
     <Compile Include="Actor.fs" />
