More tidying up extended examples.

--- a/src/FSharp.Actor/FSharp.Actor.fsproj
+++ b/src/FSharp.Actor/FSharp.Actor.fsproj
@@ -60,8 +60,7 @@
     <Compile Include="EventStream.fs" />
     <Compile Include="Transport.fs" />
     <Compile Include="Actor.System.fs" />
-    <Compile Include="Actor.Definition.fs" />
-    <Compile Include="Actor.Operations.fs" />
+    <Compile Include="Actor.Configuration.fs" />
     <Compile Include="Actor.Impl.fs" />
     <Compile Include="Actor.fs" />
     <Compile Include="Supervisor.fs" />
